src/test/deca/syntax/valid/test22_read.deca
// Description:
//    Programme testant readInt.
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : OUI
//
// Resultats:
// 	  0.0
//
// Historique:
//    cree le 14/01/2020

{
	int x;
	float f;
	
	x=readInt();
	f=readFloat();
}