src/test/deca/syntax/invalid/test4_comment.deca
// Description:
//    Programme vide testant un commentaire invalide.
//	  Etape(s) : A et B
// 	  Lexicalement : OUI
//	  Syntaxiquement : NON
//
// Resultats:
//    test_lex : pas d'erreur
//    test_synt : erreur ligne 16 : mismatched input '/' expecting
//
// Historique:
//    cree le 10/01/2021

{

}	/*
